--- a/3.4.4+SVM+Regression+-+Guided+Example.ipynb
+++ b/3.4.4+SVM+Regression+-+Guided+Example.ipynb
@@ -994,19 +994,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34\n"
+      "There are 34 features used by the keepers DataFrame\n"
      ]
     }
    ],
    "source": [
-    "print('There are {} features used by the keeperslen(keepers.columns))"
+    "print('There are {} features used by the keepers DataFrame'.format(len(keepers.columns)))"
    ]
   },
   {
@@ -1015,6 +1015,13 @@
    "source": [
     "Very. Nice. That took an order of magnitude less time. I didn't time it exactly, but it was much faster. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
